--- a/packages/annotorious-shape-labels/src/index.css
+++ b/packages/annotorious-shape-labels/src/index.css
@@ -1,3 +1,4 @@
+.a9s-annotationlayer .a9s-formatter-el,
 .a9s-annotationlayer .a9s-formatter-el foreignObject {
   overflow:visible;
   pointer-events:none;
