Added icons for selector pack + tilted box

--- a/packages/annotorious-toolbar/src/index.css
+++ b/packages/annotorious-toolbar/src/index.css
@@ -24,14 +24,13 @@
   height:100%;
 }
 
-.a9s-toolbar-btn svg rect,
-.a9s-toolbar-btn svg path {
+.a9s-toolbar-btn svg * {
   stroke-width:5px;
   fill:none;
   stroke:rgba(0,0,0,0.5);
 }
 
-.a9s-toolbar-btn svg circle {
+.a9s-toolbar-btn g.handles circle {
   stroke-width:4px;
   fill:#fff;
   stroke:#000;
@@ -41,12 +40,11 @@
   background-color:rgba(0,0,0,0.3);
 }
 
-.a9s-toolbar-btn.active svg rect,
-.a9s-toolbar-btn.active svg path {
+.a9s-toolbar-btn.active svg * {
   stroke:rgba(255,255,255,0.6);
 }
 
-.a9s-toolbar-btn.active svg circle {
+.a9s-toolbar-btn.active g.handles circle {
   stroke:#fff;
   fill:rgba(0,0,0,0.2);
 }
