--- a/plugins/annotorious-improved-polygon/src/index.css
+++ b/plugins/annotorious-improved-polygon/src/index.css
@@ -1,7 +1,52 @@
+/** Rubberband **/
 .a9s-selection.improved-polygon .a9s-rubberband {
-  fill:rgba(255,255,255,0.3);
+  fill:rgba(255,255,255,0.15);
+  stroke-width:1px;
+  stroke:rgba(0, 0, 0, 0.3);
 }
 
-.a9s-annotation .a9s-midpoint-handle {
+/** Polygon **/
+.a9s-selection.improved-polygon .a9s-inner,
+.a9s-annotation.improved-polygon.editable .a9s-inner {
+  stroke-width:2px;
+  stroke:#fff;
+  stroke-dasharray:5 3;
+}
+
+.a9s-annotation.improved-polygon.editable .a9s-inner:hover {
+  fill:transparent;
+}
+
+.a9s-selection.improved-polygon .a9s-outer,
+.a9s-annotation.improved-polygon.editable .a9s-outer {
+  stroke-width:4px;
+  stroke:rgba(0, 0, 0, 0.35);
+}
+
+/** Corner handles **/
+.a9s-annotation.improved-polygon.editable .a9s-handle .a9s-handle-outer {
+  stroke-width:1;
+  stroke:#000;  
+}
+
+.a9s-annotation.improved-polygon.editable .a9s-handle .a9s-handle-inner {
+  stroke-width:2;
+  stroke:#fff;
+  fill:#000;
+}
+
+.a9s-annotation.improved-polygon.editable .a9s-handle .a9s-handle-inner:hover {
   fill:#fff;
+}
+
+/** Midpoint handles **/
+.a9s-annotation.improved-polygon.editable .a9s-midpoint-handle {
+  fill:rgba(255,255,255,0.8);
+  stroke-width:1;
+  stroke:rgba(0,0,0,0.4);
+}
+
+.a9s-annotation.improved-polygon.editable .a9s-midpoint-handle:hover {
+  fill:#fff;
+  stroke:#000;
 }
