--- a/plugins/annotorious-osd-snappable-polygon/src/index.css
+++ b/plugins/annotorious-osd-snappable-polygon/src/index.css
@@ -1,3 +1,16 @@
+/** Cursor **/
+.a9s-snap-cursor .a9s-handle-inner {
+  stroke-width: 1px;
+  stroke: #000;
+  fill: transparent;
+  vector-effect: non-scaling-stroke;
+}
+
+.a9s-snap-cursor .a9s-handle-outer {
+  stroke-width: 0;
+  fill: rgba(0, 0, 0, 0.25);
+}
+
 /** Rubberband **/
 .a9s-selection.snap-polygon .a9s-rubberband {
   fill:rgba(255,255,255,0.15);
