--- a/plugins/annotorious-toolbar/src/index.css
+++ b/plugins/annotorious-toolbar/src/index.css
@@ -6,8 +6,6 @@
   background-color:transparent;
   border-radius:4px;
   padding:8px;
-  width:45px;
-  height:45px;
 }
 
 .a9s-toolbar-btn:hover {
@@ -16,12 +14,13 @@
 
 .a9s-toolbar-btn-inner {
   display:flex;
+  align-items: center;
 }
 
 .a9s-toolbar-btn svg {
   overflow:visible;
-  width:100%;
-  height:100%;
+  width:45px;
+  height:45px;
 }
 
 .a9s-toolbar-btn svg * {
@@ -36,12 +35,20 @@
   stroke:#000;
 }
 
+.a9s-toolbar-btn.mouse path{
+  fill:#000;
+}
+
 .a9s-toolbar-btn.active {
   background-color:rgba(0,0,0,0.3);
 }
 
 .a9s-toolbar-btn.active svg * {
   stroke:rgba(255,255,255,0.6);
+}
+
+.a9s-toolbar-btn.active.mouse path{
+  fill: rgba(255,255,255,0.6);
 }
 
 .a9s-toolbar-btn.active g.handles circle {
