--- a/plugins/annotorious-toolbar/src/index.css
+++ b/plugins/annotorious-toolbar/src/index.css
@@ -6,8 +6,12 @@
   background-color:transparent;
   border-radius:4px;
   padding:8px;
+}
+
+.a9s-toolbar-btn svg {
   width:45px;
   height:45px;
+  overflow:visible;
 }
 
 .a9s-toolbar-btn:hover {
@@ -17,12 +21,6 @@
 .a9s-toolbar-btn-inner {
   display:flex;
   align-items: center;
-}
-
-.a9s-toolbar-btn svg {
-  overflow:visible;
-  width:100%;
-  height:100%;
 }
 
 .a9s-toolbar-btn svg * {
@@ -43,6 +41,7 @@
 
 .a9s-toolbar-btn.active {
   background-color:rgba(0,0,0,0.3);
+  color:rgba(255,255,255);
 }
 
 .a9s-toolbar-btn.active svg * {
@@ -56,4 +55,16 @@
 .a9s-toolbar-btn.active g.handles circle {
   stroke:#fff;
   fill:rgba(0,0,0,0.2);
+}
+
+.moveable {
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+}
+
+.moveable:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
 }
